Added binary integer literals.